2020-04-07 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu.c: Revise geda_menu_position to use accessor
      gtk_widget_get_size_request.

2020-04-03 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_combobox.c: Remove validating GtkTreeModel in function
      geda_combo_box_new_with_model and revise documentation to stipulate why.
      Eliminate checking for NULL model in geda_combo_box_set_model.

2020-04-02 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_menu_enum.h: Define type SubmenuDirection enumeration.

    * src/widgets/geda_menu.c: Replace GTK_DIRECTION_RIGHT with SUBMENU_DIR_RIGHT.

    * src/widgets/geda_menu_item.c: Replace GTK_DIRECTION_RIGHT with SUBMENU_DIR_RIGHT.

    * src/widgets/geda_menu_shell.c: Replace GTK_LEFT_RIGHT with MENU_LEFT_RIGHT.

2020-03-31 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Do not define gtk_[h,v]scrollbar_new
      unless Gtk > 2.

2020-03-30 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu.c: Replace GTK_LEFT_RIGHT with MENU_LEFT_RIGHT.

2020-03-25 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu.c: Eliminate unused GtkContainer in function
      get_visible_size and GtkWidget in get_menu_height. Utilize macro:

          * geda_get_widget_requisition
          * geda_get_container_border_width
          * geda_get_widget_parent

2020-03-23 Wiley E. Hill <wileyhill@gmail.com>

    * tests/test_image_menu_item.c: Add check for function
      geda_image_menu_item_set_accel_group.

    * tests/test_menu_item.c: Add checks for functions:

          * geda_menu_item_get_toggle_size
          * geda_menu_item_get_from_menubar
          * geda_menu_item_get_label
          * geda_menu_item_get_label_widget

    * tests/test_radio_menu_item.c: Add check for function
      geda_menu_item_get_label. Add functions main_window and check_query.

2020-03-20 Wiley E. Hill <wileyhill@gmail.com>
